fix: avoid secrets in if-expression; robust deploy block

--- a/.github/workflows/gas-deploy.yml
+++ b/.github/workflows/gas-deploy.yml
@@ -29,16 +29,26 @@ jobs:
       - name: Install clasp
         run: npm install -g @google/clasp
 
-      - name: Write ~/.clasprc.json (from base64) + validate
+      - name: Debug CLASPRC_JSON shape (no content)
+        env:
+          CLASPRC_JSON: ${{ secrets.CLASPRC_JSON }}
+        run: |
+          node -e "const s=process.env.CLASPRC_JSON||''; const ok=/^[A-Za-z0-9+/=\\r\\n]+$/.test(s); console.log('len=',s.length,'isBase64Chars=',ok,'mod4=',s.replace(/\\s+/g,'').length%4);"
+
+
+      - name: Write ~/.clasprc.json (decode via Node) + validate
         env:
           CLASPRC_JSON: ${{ secrets.CLASPRC_JSON }}
         run: |
           if [ -z "$CLASPRC_JSON" ]; then
             echo "CLASPRC_JSON is empty"; exit 1
           fi
-          printf '%s' "$CLASPRC_JSON" | base64 -d > "$HOME/.clasprc.json"
-          test -s "$HOME/.clasprc.json"
-          node -e "const fs=require('fs'); JSON.parse(fs.readFileSync(process.env.HOME+'/.clasprc.json','utf8'));"
+          # 用 Node 解碼，先去除所有換行與空白，再以 base64 轉回檔案
+          node -e "const fs=require('fs');const p=process.env.HOME+'/.clasprc.json';let s=process.env.CLASPRC_JSON||'';s=s.replace(/\\s+/g,'');fs.writeFileSync(p, Buffer.from(s,'base64'));"
+          # 簡單驗證檔案非空、且為合法 JSON
+          test -s \"$HOME/.clasprc.json\"
+          node -e \"JSON.parse(require('fs').readFileSync(process.env.HOME+'/.clasprc.json','utf8'));\"
+
 
       - name: Ensure .clasp.json exists
         env:
@@ -64,7 +74,6 @@ jobs:
         env:
           DEPLOY_ID: ${{ secrets.GAS_DEPLOYMENT_ID }}
         run: |
-          # 如果 Secret 裡有 DEPLOY_ID，優先用；若是空值就 fallback 用你給的 ID
           if [ -n "$DEPLOY_ID" ]; then
             clasp deploy --deploymentId "$DEPLOY_ID" -d "CI deploy $GITHUB_SHA"
           else
