--- a/.github/workflows/gas-deploy.yml
+++ b/.github/workflows/gas-deploy.yml
@@ -1,4 +1,4 @@
-﻿name: Push & Deploy GAS (fixed deployment)
+name: Push & Deploy GAS (fixed deployment)
 
 on:
   push:
@@ -28,49 +28,61 @@ jobs:
       - name: Install dependencies (lockfile)
         if: ${{ hashFiles('package-lock.json') != '' }}
         run: npm ci
+
       - name: Install dependencies (no lockfile)
         if: ${{ hashFiles('package-lock.json') == '' && hashFiles('package.json') != '' }}
         run: npm install
+
       - name: Run unit tests (if any)
         if: ${{ hashFiles('package.json') != '' }}
         run: npm test --if-present
 
-      # ✅ 安裝最新版 clasp（照你的要求）
+      # 使用最新版 clasp
       - name: Install latest clasp
         run: npm i -g @google/clasp
 
+      # 合併：寫入 + 解碼 + 正規化（tokens.default -> token）
       - name: Write ~/.clasprc.json (decode/normalize/validate)
         env:
           CLASPRC_JSON: ${{ secrets.CLASPRC_JSON }}
+        shell: bash
         run: |
           set -euo pipefail
           if [ -z "${CLASPRC_JSON:-}" ]; then
             echo "::error::Missing secret CLASPRC_JSON"; exit 1
           fi
-          node -e "const fs=require('fs');
+
+          node -e "
+            const fs=require('fs');
             const p=process.env.HOME+'/.clasprc.json';
             let s=process.env.CLASPRC_JSON||'';
-            try { const j=JSON.parse(s); fs.writeFileSync(p, JSON.stringify(j,null,2)); }
-            catch(e){ s=s.replace(/\s+/g,''); fs.writeFileSync(p, Buffer.from(s,'base64')); }"
-          node -e "const fs=require('fs');
-            const p=process.env.HOME+'/.clasprc.json';
-            const j=JSON.parse(fs.readFileSync(p,'utf8'));
-            if (!j.token && j.tokens && j.tokens.default) { j.token = j.tokens.default; }
-            fs.writeFileSync(p, JSON.stringify(j, null, 2));"
+            let j;
+            try { j=JSON.parse(s); }
+            catch(e){
+              s=s.replace(/\s+/g,'');
+              j=JSON.parse(Buffer.from(s,'base64').toString());
+            }
+            if(!j.token && j.tokens && j.tokens.default){ j.token=j.tokens.default; }
+            fs.writeFileSync(p, JSON.stringify(j,null,2));
+          "
+
+          # 驗證並複製到工作目錄
           test -s "$HOME/.clasprc.json"
           cp "$HOME/.clasprc.json" "$GITHUB_WORKSPACE/.clasprc.json"
 
       - name: Ensure .clasp.json exists (do not print it)
+        shell: bash
         run: |
           if [ ! -f ".clasp.json" ]; then
             echo "::error::.clasp.json missing. Commit one with your scriptId."; exit 1
           fi
           node -e "const j=require('./.clasp.json'); if(!j.scriptId){process.exit(2)}"
 
-      # --- Sanity：在 log 顯示長度與雜湊，方便你確認 CI 拿到正確 ID ---
+      # Sanity：在 log 顯示長度與雜湊，方便確認 CI 拿到正確 ID
       - name: Sanity check DEPLOY_ID (length & hash)
         env:
           DEPLOY_ID: ${{ secrets.GAS_DEPLOYMENT_ID }}
+        shell: bash
         run: |
           python3 - << 'PY'
 import os,hashlib
@@ -81,8 +93,9 @@ if not sid or len(sid)<20:
     raise SystemExit('DEPLOY_ID looks empty/too short; abort.')
 PY
 
-      # --- BEFORE：取部署清單（優先用 --json；失敗再解析文字） ---
+      # BEFORE：取部署清單（JSON 優先；失敗則解析文字輸出）
       - name: Snapshot deployments (BEFORE)
+        shell: bash
         run: |
           set -e
           if clasp list-deployments --json > before.json 2>/dev/null; then
@@ -90,31 +103,25 @@ PY
           else
             echo "before: fallback to text parse"
             clasp list-deployments > before.txt || clasp deployments > before.txt || true
-            node -e "const fs=require('fs');
-              const t=fs.readFileSync('before.txt','utf8');
-              const ids=[...t.matchAll(/AK[a-zA-Z0-9_-]{20,}/g)].map(m=>m[0]);
-              fs.writeFileSync('before.json', JSON.stringify([...new Set(ids)]));
-              console.log('BEFORE IDs:', ids.join(',')||'(none)');"
+            node -e "const fs=require('fs'); const t=fs.readFileSync('before.txt','utf8'); const ids=[...t.matchAll(/AK[a-zA-Z0-9_-]{20,}/g)].map(m=>m[0]); fs.writeFileSync('before.json', JSON.stringify([...new Set(ids)])); console.log('BEFORE IDs:', ids.join(',')||'(none)');"
           fi
 
+      # 驗證：目標部署 ID 必須存在於「這個 Script」
       - name: Ensure target deployment exists (BEFORE)
         env:
           DEPLOY_ID: ${{ secrets.GAS_DEPLOYMENT_ID }}
+        shell: bash
         run: |
-          node -e "const fs=require('fs'),id=process.env.DEPLOY_ID;
-            const arr=JSON.parse(fs.readFileSync('before.json','utf8'));
-            if(!Array.isArray(arr) || !arr.includes(id)){
-              console.error('Target deployment ID NOT found in THIS script BEFORE deploy. IDs=',arr); process.exit(1)
-            }
-            console.log('Target deployment exists BEFORE deploy.');"
+          node -e "const fs=require('fs'),id=process.env.DEPLOY_ID; const arr=JSON.parse(fs.readFileSync('before.json','utf8')); if(!Array.isArray(arr) || !arr.includes(id)){console.error('Target deployment ID NOT found in THIS script BEFORE deploy. IDs=',arr); process.exit(1)} console.log('Target deployment exists BEFORE deploy.');"
 
       - name: Push to Apps Script
         run: clasp push -f
 
-      # ✅ 只覆蓋固定 ID（新版 clasp 仍支援此參數）
+      # 只覆蓋固定 ID（不新建）
       - name: Deploy with fixed Deployment ID
         env:
           DEPLOY_ID: ${{ secrets.GAS_DEPLOYMENT_ID }}
+        shell: bash
         run: |
           set -euo pipefail
           if [ -z "${DEPLOY_ID:-}" ]; then
@@ -122,8 +129,9 @@ PY
           fi
           clasp deploy --deploymentId "$DEPLOY_ID" -d "CI ${GITHUB_SHA}"
 
-      # --- AFTER：再取清單（同樣 JSON 優先、文字備援） ---
+      # AFTER：再取清單（JSON 優先、文字備援）
       - name: Snapshot deployments (AFTER)
+        shell: bash
         run: |
           set -e
           if clasp list-deployments --json > after.json 2>/dev/null; then
@@ -131,37 +139,22 @@ PY
           else
             echo "after: fallback to text parse"
             clasp list-deployments > after.txt || clasp deployments > after.txt || true
-            node -e "const fs=require('fs');
-              const t=fs.readFileSync('after.txt','utf8');
-              const ids=[...t.matchAll(/AK[a-zA-Z0-9_-]{20,}/g)].map(m=>m[0]);
-              fs.writeFileSync('after.json', JSON.stringify([...new Set(ids)]));
-              console.log('AFTER IDs:', ids.join(',')||'(none)');"
+            node -e "const fs=require('fs'); const t=fs.readFileSync('after.txt','utf8'); const ids=[...t.matchAll(/AK[a-zA-Z0-9_-]{20,}/g)].map(m=>m[0]); fs.writeFileSync('after.json', JSON.stringify([...new Set(ids)])); console.log('AFTER IDs:', ids.join(',')||'(none)');"
           fi
 
+      # 驗證：數量不可變多、且目標 ID 還在
       - name: Verify no new deployment was created
         env:
           DEPLOY_ID: ${{ secrets.GAS_DEPLOYMENT_ID }}
+        shell: bash
         run: |
-          node -e "const fs=require('fs'),id=process.env.DEPLOY_ID;
-            const b=JSON.parse(fs.readFileSync('before.json','utf8'));
-            const a=JSON.parse(fs.readFileSync('after.json','utf8'));
-            const cntB=Array.isArray(b)?b.length:0;
-            const cntA=Array.isArray(a)?a.length:0;
-            const has=Array.isArray(a)&&a.includes(id);
-            console.log('before =',cntB,', after =',cntA,', hasTarget =',has);
-            if(!has){console.error('Target deployment ID not found AFTER deploy');process.exit(1)}
-            if(cntA>cntB){console.error('New deployment seems created!');process.exit(1)}"
+          node -e "const fs=require('fs'),id=process.env.DEPLOY_ID; const b=JSON.parse(fs.readFileSync('before.json','utf8')); const a=JSON.parse(fs.readFileSync('after.json','utf8')); const cntB=Array.isArray(b)?b.length:0; const cntA=Array.isArray(a)?a.length:0; const has=Array.isArray(a)&&a.includes(id); console.log('before =',cntB,', after =',cntA,', hasTarget =',has); if(!has){console.error('Target deployment ID not found AFTER deploy');process.exit(1)} if(cntA>cntB){console.error('New deployment seems created!');process.exit(1)}"
 
+      # 驗證：保留清單都還在（相容單/複數變數名）
       - name: Verify preserved deployments still exist (AFTER)
         env:
           PRESERVE_IDS: ${{ vars.PRESERVE_DEPLOYMENT_IDS }}
-          PRESERVE_ID: ${{ vars.PRESERVE_DEPLOYMENT_ID }}   # 相容舊命名
+          PRESERVE_ID: ${{ vars.PRESERVE_DEPLOYMENT_ID }}   # 向下相容舊命名
+        shell: bash
         run: |
-          node -e "const fs=require('fs');
-            const a=JSON.parse(fs.readFileSync('after.json','utf8'));
-            const env=(process.env.PRESERVE_IDS||process.env.PRESERVE_ID||'').trim();
-            if(!env){ console.log('No PRESERVE_DEPLOYMENT_IDS set; skip'); process.exit(0); }
-            const ids=env.split(/[,\s]+/).filter(Boolean);
-            const miss=ids.filter(id=>!a.includes(id));
-            if(miss.length){ console.error('Preserved deployments disappeared:', miss.join(',')); process.exit(1); }
-            console.log('All preserved IDs exist AFTER deploy');"
+          node -e "const fs=require('fs'); const a=JSON.parse(fs.readFileSync('after.json','utf8')); const env=(process.env.PRESERVE_IDS||process.env.PRESERVE_ID||'').trim(); if(!env){ console.log('No PRESERVE_DEPLOYMENT_IDS set; skip'); process.exit(0); } const ids=env.split(/[,\s]+/).filter(Boolean); const miss=ids.filter(id=>!a.includes(id)); if(miss.length){ console.error('Preserved deployments disappeared:', miss.join(',')); process.exit(1); } console.log('All preserved IDs exist AFTER deploy');"
