--- a/.github/workflows/gas-deploy.yml
+++ b/.github/workflows/gas-deploy.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Ensure .clasp.json exists (do not print it)
         run: node -e "const j=require('./.clasp.json'); if(!j.scriptId){process.stderr.write('.clasp.json missing scriptId\\n'); process.exit(2)}"
 
-      # ✅ 單行 Guard：manifest 必須包含 webapp 區塊
+      #  單行 Guard：manifest 必須包含 webapp 區塊
       - name: Guard: manifest must include webapp block
         run: node -e "const j=require('./appsscript.json'); if(!j.webapp||!j.webapp.access||!j.webapp.executeAs){console.error('appsscript.json missing webapp config'); process.exit(1);} console.log('webapp OK:', j.webapp);"
 
