ci: limit PR workflow to unit tests

--- a/.github/workflows/gas-deploy.yml
+++ b/.github/workflows/gas-deploy.yml
@@ -16,9 +16,31 @@ defaults:
     shell: bash
 
 jobs:
-  test-stage:
+  unit-tests:
     if: github.event_name == 'pull_request' || github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
+    timeout-minutes: 15
+
+    steps:
+      - name: "Checkout"
+        uses: actions/checkout@v4
+
+      - name: "Setup Node 18"
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+
+      - name: "Install deps"
+        run: |
+          if [ -f package-lock.json ]; then npm ci; else npm install; fi
+
+      - name: "Run unit tests (Jest)"
+        run: npm test --if-present
+
+  test-stage:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    needs: [unit-tests]
     timeout-minutes: 25
 
     steps:
@@ -61,17 +83,57 @@ jobs:
         run: |
           node - <<'EOF'
           const fs = require('fs');
-          const m = JSON.parse(fs.readFileSync('appsscript.json','utf8'));
-          if (!m.webapp || !m.webapp.access || !m.webapp.executeAs) {
+          const path = require('path');
+
+          const cwd = process.cwd();
+          const candidates = [];
+
+          try {
+            const clasp = JSON.parse(fs.readFileSync(path.join(cwd, '.clasp.json'), 'utf8'));
+            if (clasp.rootDir) {
+              candidates.push(path.join(cwd, clasp.rootDir, 'appsscript.json'));
+            }
+          } catch (err) {
+            if (err.code !== 'ENOENT') {
+              console.warn('⚠️ 無法解析 .clasp.json：', err.message);
+            }
+          }
+
+          candidates.push(path.join(cwd, 'appsscript.json'));
+
+          let manifestPath = null;
+          for (const candidate of candidates) {
+            if (!candidate) continue;
+            if (fs.existsSync(candidate) && fs.statSync(candidate).isFile()) {
+              manifestPath = candidate;
+              break;
+            }
+          }
+
+          if (!manifestPath) {
+            console.error('找不到 appsscript.json（根目錄或 .clasp.json 的 rootDir 中都沒有）');
+            process.exit(1);
+          }
+
+          let manifest;
+          try {
+            manifest = JSON.parse(fs.readFileSync(manifestPath, 'utf8'));
+          } catch (err) {
+            console.error('appsscript.json 不是有效 JSON：', err.message);
+            process.exit(1);
+          }
+
+          if (!manifest.webapp || !manifest.webapp.access || !manifest.webapp.executeAs) {
             console.error('appsscript.json missing webapp.access/executeAs');
             process.exit(1);
           }
-          const okLog = ['STACKDRIVER','CLOUD','NONE'].includes(m.exceptionLogging||'STACKDRIVER');
+          const okLog = ['STACKDRIVER','CLOUD','NONE'].includes(manifest.exceptionLogging || 'STACKDRIVER');
           if (!okLog) {
-            console.error('exceptionLogging must be STACKDRIVER|CLOUD|NONE, got:', m.exceptionLogging);
+            console.error('exceptionLogging must be STACKDRIVER|CLOUD|NONE, got:', manifest.exceptionLogging);
             process.exit(1);
           }
-          console.log('webapp OK:', m.webapp, 'exceptionLogging=', m.exceptionLogging);
+          const rel = path.relative(cwd, manifestPath) || 'appsscript.json';
+          console.log('webapp OK:', manifest.webapp, 'manifest=', rel, 'exceptionLogging=', manifest.exceptionLogging);
           EOF
 
       # BEFORE snapshot（文字解析 fallback）
@@ -147,10 +209,6 @@ jobs:
             }
           "
 
-      # --- Unit tests / E2E tests (可先無檔；--if-present 不會 fail) ---
-      - name: "Run unit tests (Jest)"
-        run: npm test --if-present
-
       - name: "Debug TEST_DEPLOYMENT_ID length"
         env:
           TEST_DEPLOYMENT_ID: ${{ secrets.TEST_DEPLOYMENT_ID }}
@@ -184,7 +242,7 @@ jobs:
           echo "::error::TEST health check failed (code=${code} location=${loc})"; exit 1
 
   deploy-prod:
-    if: github.ref == 'refs/heads/main'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: [test-stage]
     timeout-minutes: 20
