--- a/.github/workflows/ci-preview.yml
+++ b/.github/workflows/ci-preview.yml
@@ -24,7 +24,9 @@ jobs:
     env:
       HAS_AUTH: ${{ secrets.PLAYWRIGHT_AUTH_STATE != '' }}
       TEST_DEPLOYMENT_ID: ${{ secrets.TEST_DEPLOYMENT_ID }}
-      E2E_PATH: ${{ vars.E2E_PATH }}
+      E2E_PATH: ${{ vars.E2E_PATH || '/exec?route=AA01' }}
+      E2E_TIMEOUT: ${{ vars.E2E_TIMEOUT || '30000' }}
+      LOCAL_BASE_URL: ${{ vars.LOCAL_BASE_URL || 'http://127.0.0.1:3000/' }}
     if: >-
       github.event_name == 'push' ||
       github.event_name == 'workflow_dispatch' ||
@@ -85,6 +87,8 @@ jobs:
         env:
           GAS_WEBAPP_URL: ${{ steps.url.outputs.url }}
           E2E_PATH: ${{ env.E2E_PATH }}
+          E2E_TIMEOUT: ${{ env.E2E_TIMEOUT }}
+          LOCAL_BASE_URL: ${{ env.LOCAL_BASE_URL }}
 
       - name: Build artifact index
         id: artifact_index
@@ -100,6 +104,8 @@ jobs:
         run: npm run health
         env:
           GAS_WEBAPP_URL: ${{ steps.url.outputs.url }}
+          E2E_PATH: ${{ env.E2E_PATH }}
+          E2E_TIMEOUT: ${{ env.E2E_TIMEOUT }}
 
       - uses: actions/upload-artifact@v4
         if: always()
