--- a/.github/workflows/gas-deploy.yml
+++ b/.github/workflows/gas-deploy.yml
@@ -60,6 +60,9 @@ jobs:
       HAS_AUTH: ${{ secrets.PLAYWRIGHT_AUTH_STATE != '' }}
       HAS_WEBAPP_URL: ${{ secrets.GAS_WEBAPP_URL != '' }}
       HAS_REMOTE_TEST: ${{ secrets.PLAYWRIGHT_AUTH_STATE != '' && secrets.GAS_WEBAPP_URL != '' }}
+      E2E_PATH: ${{ vars.E2E_PATH || '/exec?route=AA01' }}
+      E2E_TIMEOUT: ${{ vars.E2E_TIMEOUT || '30000' }}
+      LOCAL_BASE_URL: ${{ vars.LOCAL_BASE_URL || 'http://127.0.0.1:3000/' }}
 
     steps:
       - name: "Checkout"
@@ -94,6 +97,11 @@ jobs:
       - name: Auto-repair remote E2E (requires auth)
         if: ${{ env.HAS_REMOTE_TEST == 'true' }}
         run: node scripts/auto-repair.mjs --run "npm run e2e:remote" --verify "npm run health"
+        env:
+          GAS_WEBAPP_URL: ${{ env.GAS_WEBAPP_URL }}
+          E2E_PATH: ${{ env.E2E_PATH }}
+          E2E_TIMEOUT: ${{ env.E2E_TIMEOUT }}
+          LOCAL_BASE_URL: ${{ env.LOCAL_BASE_URL }}
       - name: Debug secrets → env mapping
         run: |
           node -e "process.stdout.write('GAS_WEBAPP_URL length=' + String((process.env.GAS_WEBAPP_URL || '').length))"
@@ -101,6 +109,10 @@ jobs:
       - name: Health check (200/302 or skip)
         if: ${{ env.HAS_WEBAPP_URL == 'true' }}
         run: npm run health
+        env:
+          GAS_WEBAPP_URL: ${{ env.GAS_WEBAPP_URL }}
+          E2E_PATH: ${{ env.E2E_PATH }}
+          E2E_TIMEOUT: ${{ env.E2E_TIMEOUT }}
 
       - name: Build artifact index
         if: always()
