--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "lint": "eslint --max-warnings=0 --ext .js,.cjs,.mjs,.ts,.tsx src __tests__ playwright scripts",
+    "lint": "eslint --max-warnings=0 --no-error-on-unmatched-pattern --ext .js,.cjs,.mjs,.ts,.tsx src __tests__ playwright scripts",
     "format": "prettier --check .",
-    "test": "jest --config=jest.config.cjs",
+    "test": "npm run test:url-helper && jest --config=jest.config.cjs",
     "test:watch": "jest --watch --config=jest.config.cjs",
+    "test:url-helper": "node --test tests/url-helper.node.test.mjs",
     "test:playwright": "playwright test",
     "e2e:ui": "cross-env E2E_TARGET=local playwright test --grep @ui",
     "e2e:remote": "cross-env E2E_TARGET=remote playwright test --grep @remote",
