--- a/.github/workflows/predeploy.yml
+++ b/.github/workflows/predeploy.yml
@@ -22,7 +22,9 @@ jobs:
       HAS_AUTH: ${{ secrets.PLAYWRIGHT_AUTH_STATE != '' }}
       HAS_URL: ${{ secrets.GAS_WEBAPP_URL != '' }}
       GAS_WEBAPP_URL: ${{ secrets.GAS_WEBAPP_URL }}
-      E2E_PATH: ${{ vars.E2E_PATH }}
+      E2E_PATH: ${{ vars.E2E_PATH || '?route=AA01' }}
+      E2E_TIMEOUT: ${{ vars.E2E_TIMEOUT || '30000' }}
+      LOCAL_BASE_URL: ${{ vars.LOCAL_BASE_URL || 'http://127.0.0.1:3000/' }}
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -78,17 +80,35 @@ jobs:
       - name: Run local E2E (@ui)
         run: npm run e2e:ui
 
+      - name: Preflight – forbid overriding GAS exec path
+        run: |
+          set -euo pipefail
+          BASE="${BASE_URL:-}"
+          PATH_INPUT="${PATH_INPUT:-}"
+          if printf '%s' "$BASE" | grep -qE '^https://script\.google\.com/.*/exec/?$' && \
+             printf '%s' "$PATH_INPUT" | grep -qE '^/exec(/|\?|$)'; then
+            echo "::error::E2E_PATH should be query-only when base ends with /exec (use \"?route=...\")"
+            exit 1
+          fi
+        env:
+          BASE_URL: ${{ env.GAS_WEBAPP_URL }}
+          PATH_INPUT: ${{ env.E2E_PATH }}
+
       - name: Auto-repair remote E2E (@remote)
         if: ${{ env.HAS_AUTH == 'true' && env.HAS_URL == 'true' }}
         run: node scripts/auto-repair.mjs --run "npm run e2e:remote" --verify "npm run health"
         env:
           GAS_WEBAPP_URL: ${{ env.GAS_WEBAPP_URL }}
           E2E_PATH: ${{ env.E2E_PATH }}
+          E2E_TIMEOUT: ${{ env.E2E_TIMEOUT }}
+          LOCAL_BASE_URL: ${{ env.LOCAL_BASE_URL }}
 
       - name: Health check (200/302 or skip)
         run: npm run health
         env:
           GAS_WEBAPP_URL: ${{ env.GAS_WEBAPP_URL }}
+          E2E_PATH: ${{ env.E2E_PATH }}
+          E2E_TIMEOUT: ${{ env.E2E_TIMEOUT }}
 
       - name: Build artifact index
         if: always()
